--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ color: var(--addonehf);
    line-height: 1.5;
    font-weight: 400;
    letter-spacing: 0.02em;
-   color: var(--sect);
+   color: var(--addone);
 }
 
 
